# ifunny-auth

./: Cargo.toml
crates/ifunny-auth/: Cargo.toml
crates/ifunny-auth/src/: cli.rs  main.rs
crates/ifunny-basic/: Cargo.toml
ifunny-basic/: Cargo.toml  README.md
ifunny-basic/src/: lib.rs
