[package]
name = "ifunny-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1_smol = { version = "1.0.0", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
sha256 = "1.4.0"
easy_base64 = "0.1.7"
